--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cypress-parcel-preprocessor",
   "description": "Cypress preprocessor for bundling JavaScript via Parcel",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "author": "Gleb Bahmutov <gleb.bahmutov@gmail.com>",
   "bugs": "https://github.com/bahmutov/cypress-parcel-preprocessor/issues",
   "config": {
@@ -65,7 +65,9 @@
     "unit": "mocha src/*spec.js",
     "unused-deps": "dependency-check --unused --no-dev .",
     "cy:open": "cypress open",
-    "cy:run": "cypress run"
+    "cy:run": "cypress run",
+    "travis-deploy-once": "travis-deploy-once",
+    "semantic-release": "semantic-release"
   },
   "release": {
     "analyzeCommits": "simple-commit-message"
@@ -83,7 +85,9 @@
     "nsp": "3.2.1",
     "pre-git": "3.17.0",
     "prettier-standard": "8.0.0",
-    "standard": "11.0.0"
+    "standard": "11.0.0",
+    "travis-deploy-once": "^4.3.4",
+    "semantic-release": "^12.4.1"
   },
   "dependencies": {
     "debug": "3.1.0",
