--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
   "devDependencies": {
     "ban-sensitive-files": "1.9.2",
     "check-more-types": "2.24.0",
-    "cypress": "1.4.2",
+    "cypress": "2.1.0",
     "dependency-check": "3.0.0",
     "deps-ok": "1.2.2",
     "git-issues": "1.3.1",
@@ -85,9 +85,9 @@
     "nsp": "3.2.1",
     "pre-git": "3.17.0",
     "prettier-standard": "8.0.0",
+    "semantic-release": "^12.4.1",
     "standard": "11.0.0",
-    "travis-deploy-once": "^4.3.4",
-    "semantic-release": "^12.4.1"
+    "travis-deploy-once": "^4.3.4"
   },
   "dependencies": {
     "debug": "3.1.0",
