--- a/package.json
+++ b/package.json
@@ -87,10 +87,13 @@
     "prettier-standard": "8.0.0",
     "semantic-release": "^12.4.1",
     "standard": "11.0.0",
-    "travis-deploy-once": "^4.3.4"
+    "travis-deploy-once": "^4.3.4",
+    "parcel-bundler": "1.7.0"
   },
   "dependencies": {
-    "debug": "3.1.0",
-    "parcel-bundler": "1.6.2"
+    "debug": "3.1.0"
+  },
+  "peerDependencies": {
+    "parcel-bundler": "^1.7.0"
   }
 }
