fix: pass just base name as the output to the bundler

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "secure": "nsp check",
     "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";",
     "test": "npm run unit",
+    "preunit": "rm -rf dist",
     "unit": "mocha src/*spec.js",
     "unused-deps": "dependency-check --unused --no-dev .",
     "cy:open": "cypress open",
