chore: add e2e test run for #2

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ node_js:
 script:
   - npm t
   - npm run cy:run
+  - node ./e2e-run.js
 after_success:
   - npm run travis-deploy-once "npm run semantic-release"
 branches:
