--- a/package.json
+++ b/package.json
@@ -71,7 +71,15 @@
     "semantic-release": "semantic-release"
   },
   "release": {
-    "analyzeCommits": "simple-commit-message"
+    "analyzeCommits": {
+      "preset": "angular",
+      "releaseRules": [
+        {
+          "type": "break",
+          "release": "major"
+        }
+      ]
+    }
   },
   "devDependencies": {
     "ban-sensitive-files": "1.9.2",
@@ -86,9 +94,9 @@
     "nsp": "3.2.1",
     "pre-git": "3.17.0",
     "prettier-standard": "8.0.0",
-    "semantic-release": "^12.4.1",
+    "semantic-release": "^15.1.4",
     "standard": "11.0.0",
-    "travis-deploy-once": "^4.3.4",
+    "travis-deploy-once": "^4.4.1",
     "parcel-bundler": "1.7.0"
   },
   "dependencies": {
