--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 cache:
   directories:
     - ~/.npm
+    - ~/.cache
+install:
+  - npm ci
 notifications:
   email: true
 node_js:
