chore: set up semantic release on Circle, close #36

--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "nsp": "3.2.1",
     "pre-git": "3.17.1",
     "prettier-standard": "8.0.1",
-    "semantic-release": "15.5.0",
+    "semantic-release": "^15.5.2",
     "standard": "11.0.1",
     "travis-deploy-once": "5.0.0",
     "parcel-bundler": "1.7.1"
