--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,4 +21,6 @@ jobs:
       - run: npm t
       - run: npm run cy:run
       - run: node ./e2e-run.js
-      # TODO semantic release
+      - run:
+          name: release
+          command: npm run semantic-release || true
